# forge

./: .gitignore  .pyscn.toml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/: settings.json  settings.local.json
agents/: architect.md  backend-dev.md  critic.md  doc-writer.md  frontend-dev.md  investigator.md  planner.md  qa-reviewer.md  security-reviewer.md
docs/: README.md  environment.md  graphify.md  pyscn-quality-disposition.md  remaining-tier-b-and-test-failures-plan.md  sessions.md  skylos-triage.md  structural-quality.md  studio.md
forge_codex/: cli.py
forge_next/: __init__.py  __main__.py  claude_graphify.py  claude_graphify_audit.py  cli.py  cli_dispatch.py  cli_doctor_checks.py  cli_inspect.py  cli_install.py  cli_install_claude.py  cli_install_codex.py  cli_install_cursor.py  cli_install_io.py  cli_install_report.py  cli_install_templates.py  cli_runtime.py  codex_agents.py  cursor_subagent_hooks.py  graphify.py  graphify_enforcement.py  graphify_policy.py  structural_tools.py
integrations/: README.md  verify.md
prompts/: report.md
scripts/: e2e_diagnose_hypothesis_gate.py  generate_integrations.py  smoke.py
templates/: ADR-FORMAT.md  adr-template.md  beads-integration.md  brainstorming-gates.md  code-smells.md  dashboard.md  design-spec.md  diagnose-execution-playbooks.md  five-why-protocol.md  forge-agent-roster.md  graphify-contract.md  handoff-protocol.md  memory-README.md  memory-protocol.md  parallel-dispatch.md  plan-modes.md  scope-size-model.md  sketch-protocol.md  stage-approval.md  stage-document.md  stage-plan.md  stage-review.md  stage-solution.md  standards-review-baseline.md  structural-build-charter.md  structural-quality-eight-agents.md  structural-quality-probes.md  studio.md  subagent-progress.md  tdd-protocol.md  test-flow-criteria.md  ux-review-coverage-checklist.md  ux-review-criteria.md  verification-protocol.md  workflow-skill-preamble.md  writing-plans.md
tests/: conftest.py  test_claude_graphify.py  test_cli_json_summary.py  test_cli_modules.py  test_cli_passthrough.py  test_code_review_effort_recommendation.py  test_code_review_session.py  test_codex_agents.py  test_design_rename.py  test_design_spec_gate.py  test_design_spec_issues_gate.py  (+50 more)
tests/fixtures/mock-flows-target/: README.md  pyproject.toml
tests/fixtures/mock-flows-target/app/: main.py  models.py  roles.yaml
tests/fixtures/mock-flows-target/tests/: conftest.py  test_smoke.py
(+437 files in other folders)
