[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-next"
version = "0.1.1"
description = "Forge Codex: install-once workflow orchestrators for Cursor/Codex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Forge Codex" }]

[project.scripts]
forge = "forge_codex.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_codex*", "scripts*"]

[tool.setuptools.package-data]
forge_codex = ["assets/**/*.md"]

