[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-next"
version = "0.9.5"
description = "Forge Codex: install-once workflow orchestrators for Cursor/Codex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Forge Codex" }]

dependencies = [
    "tomlkit>=0.12,<2",
]

[project.scripts]
forge = "forge_next.cli:main"
codex-agents = "forge_next.codex_agents:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_next*", "scripts*"]

[tool.setuptools.package-data]
forge_next = ["assets/**/*.md"]

